# lifeos

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_dynamic_dashboard.py  0003_chat_analysis_tracking.py  0004_reflection_summaries.py
lifeos/: agent.py  auth.py  config.py  db.py  llm.py  main.py  models.py  rag.py  scheduler.py  schemas.py
static/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
tests/: test_app.py
